--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
-python-dotenv==0.20.0
+python-decouple==3.6
+django-extensions==3.2.0
 sqlparse==0.4.2
 tomli==2.0.1
 tzdata==2022.1
